platforms/ng-era-platforms/ng-cross-era-platforms/meta/semantic-core/deployments/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    softwareos-base/audit-log-level: minimal
    softwareos-base/governance-policy: standard-v1
    softwareos-base/uri: softwareos-base://k8s/core/service/gl-spec-core-service
    softwareos-base/urn: urn:softwareos-base:k8s:core:service:gl-spec-core-service:sha256-7f04bcc3a9329cd9610147f3de0aa1ca237577892fad5e73b2284b9f17c60ab4
    prometheus.io/port: '9091'
    prometheus.io/scrape: 'true'
  labels:
    app.kubernetes.io/component: eco-component
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: spec-core
    app.kubernetes.io/part-of: softwareos-base
    app.kubernetes.io/version: 1.0.0
    softwareos-base/environment: development
    softwareos-base/governance: aligned
    softwareos-base/owner: eco-system
    softwareos-base/part-of: softwareos-base
    softwareos-base/platform: core
    gl.service/semantic.core: 'true'
    platform: gl-platform-services
  name: gl-spec-core-service
  namespace: gl-platform-spec-core
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: grpc
    port: 9090
    protocol: TCP
    targetPort: 9090
  - name: metrics
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app.kubernetes.io/name: spec-core
    version: v1.0.0
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    softwareos-base/audit-log-level: minimal
    softwareos-base/governance-policy: standard-v1
    softwareos-base/uri: softwareos-base://k8s/core/service/gl-spec-core-external
    softwareos-base/urn: urn:softwareos-base:k8s:core:service:gl-spec-core-external:sha256-98e12697a9653b35253c7ca01871dc2c64a64d1a6e10c906b70c4a3b7f658507
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: alb
  labels:
    app.kubernetes.io/component: eco-component
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: spec-core-external
    app.kubernetes.io/part-of: softwareos-base
    app.kubernetes.io/version: 1.0.0
    softwareos-base/environment: development
    softwareos-base/governance: aligned
    softwareos-base/owner: eco-system
    softwareos-base/part-of: softwareos-base
    softwareos-base/platform: core
    platform: gl-platform-services
  name: gl-spec-core-external
  namespace: gl-platform-spec-core
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: spec-core
    version: v1.0.0
  type: LoadBalancer
